# orquestador-de-agentes

./: .agent_allowlist.json  .agent_denylist.json  .editorconfig  .gitattributes  .gitignore  .gitleaksignore  .goosehints  .pre-commit-config.yaml  AGENTS.md  AGENT_SECURITY.md  AUDIT_WP-2026-141.md  CHANGELOG.md  CLAUDE.md  CLOSURE_MODEL.md  CREDITS.md  DISTRIBUTION_GUIDE.md  INTERACTION_MODES.md  MANIFEST.distribute  MANIFEST.workspace  MANUAL_PUBLICATION_CHECKLIST.md  MI_PROYECTO.bat  PLAN_WP-2026-143.md  PLAN_WP-2026-145.md  PROJECT.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  REPOSITORY_STRUCTURE.md  UPGRADE_CLEANUP_GUIDE.md  UPGRADE_GUIDE.md  VERIFY_VERSION.sh  llms-full.txt  llms.txt  pyproject.toml  pytest.ini  uv.toml  validate_template.bat  validate_template.ps1
.agent/: .version_manifest.json  README.md  agent_controller.py  agents_config.py  closure_invariants.py  completion_checker.py  completion_common.py  host-setup.ps1.example  host-setup.sh.example  known_models.json  motor_checkpoint.py  project_manifest.toml  scope_gate.py  session_tracker.py  state_validation.py
.claude/: README.md  claude-security-guidance.md  config.json  security-patterns.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.opencode/: MODELS.md  opencode.json
.session/: wp_inventory.md
agent_system/: __init__.py
bus/: __init__.py  approval.py  blocker_signature.py  builder_capsule.py  builder_lifecycle.py  builder_locks.py  builder_relaunch.py  decision_parser.py  event_bus.py  evidence.py  exceptions.py  memory_loader.py  opencode_transport.py  redact.py  review_bridge.py  review_observations.py  review_packet.py  review_report.py  review_rubrics.py  review_state.py  skill_resolver.py  state_machine.py  supervisor.py  ticket_id.py  time_utils.py  utils.py  watcher.py
checkpoint/: review-WP-2026-169
docs/: BUS_ARCHITECTURE_WT-2026-210.md  BUS_PROGRESS_AUDIT_2026-06-02.md  KNOWN_FAILURE_PATTERNS.md
prompts/: audit_agent_output.md  audit_bus.md  audit_git_publication.md  audit_pipeline.md  audit_plan.md  destination_bootstrap.md  launch_builder.md  memory_upload.md  orchestrator_pipeline.md  refactor_bootstrap.md  review_manager.md  session_bootstrap.md  session_close_chat.md  system_audit_master.md  (+1 more)
(+556 files in other folders)
